fix: [FE] 여러 위치에서 더보기 및 줄이기 버튼 동작하도록 js 수정

--- a/html/admin/customerList.html
+++ b/html/admin/customerList.html
@@ -95,25 +95,30 @@
                                         <span>희망 예식일</span>
                                         <span>2024-11-23 토요일</span>
                                     </div>
-                                    <div class="message">
-                                        <span>전달 사항</span>
-                                        <p class="message-summary">
+                                   <!-- 2-3. 전달사항 더보기 & 줄이기-->
+                                <div class="announcement">
+                                    <span>전달 사항</span>
+                                    <div class="text-wrapper">
+                                        <p class="text">
                                             2024년 10월 15일 오후 2시에 예식을
                                             진행하고자 합니다. 예상 인원은 250명
-                                            정도이며, 예산은 3000만원 내외로
+                                            정도이며, 예산은 300만원 내외로
                                             생각하고 있습니다. 특별히 꽃장식과
                                             사진 촬영을 부탁드리고 싶습니다.
                                             예약 가능 여부와 세부사항, 추가 비용
                                             등에 대해 상담하고 싶습니다.
+                                        <div class="more-text">더보기</div>
+                                        <div class="less-text">줄이기</div>
                                         </p>
                                     </div>
+                                </div>
                                 </div>
                             </div>
                         </a>
                         <div class="visit-details">
                             <div class="visit-time">
                                 <div>채플홀</div>
-                                <div class="visit-false">12:00</div>
+                                <div class="visit-false">16:00</div>
                             </div>
                             <div class="visit-customer-info">
                                 <div class="customer-1">
@@ -137,9 +142,22 @@
                                     <span>희망 예식일</span>
                                     <span>2024-11-23 토요일</span>
                                 </div>
-                                <div class="message">
+                                <!-- 2-3. 전달사항 더보기 & 줄이기-->
+                                <div class="announcement">
                                     <span>전달 사항</span>
-                                    <p class="message-summary">없음</p>
+                                    <div class="text-wrapper">
+                                        <p class="text">
+                                            2024년 10월 15일 오후 2시에 예식을
+                                            진행하고자 합니다. 예상 인원은 250명
+                                            정도이며, 예산은 300만원 내외로
+                                            생각하고 있습니다. 특별히 꽃장식과
+                                            사진 촬영을 부탁드리고 싶습니다.
+                                            예약 가능 여부와 세부사항, 추가 비용
+                                            등에 대해 상담하고 싶습니다.
+                                        <div class="more-text">더보기</div>
+                                        <div class="less-text">줄이기</div>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
