--- a/html/admin/adminMain.html
+++ b/html/admin/adminMain.html
@@ -116,17 +116,22 @@
                                     <span>희망 예식일</span>
                                     <span>2024-11-23 토요일</span>
                                 </div>
-                                <div class="message">
+                                <!-- 3-1. 전달사항 더보기 & 줄이기-->
+                                <div class="announcement">
                                     <span>전달 사항</span>
-                                    <p class="message-summary">
-                                        2024년 10월 15일 오후 2시에 예식을
-                                        진행하고자 합니다. 예상 인원은 250명
-                                        정도이며, 예산은 3000만원 내외로
-                                        생각하고 있습니다. 특별히 꽃장식과 사진
-                                        촬영을 부탁드리고 싶습니다. 예약 가능
-                                        여부와 세부사항, 추가 비용 등에 대해
-                                        상담하고 싶습니다.
-                                    </p>
+                                    <div class="text-wrapper">
+                                        <p class="text">
+                                            2024년 10월 15일 오후 2시에 예식을
+                                            진행하고자 합니다. 예상 인원은 250명
+                                            정도이며, 예산은 300만원 내외로
+                                            생각하고 있습니다. 특별히 꽃장식과
+                                            사진 촬영을 부탁드리고 싶습니다.
+                                            예약 가능 여부와 세부사항, 추가 비용
+                                            등에 대해 상담하고 싶습니다.
+                                        <div class="more-text">더보기</div>
+                                        <div class="less-text">줄이기</div>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
