--- a/html/admin/quoteModal.html
+++ b/html/admin/quoteModal.html
@@ -10,23 +10,23 @@
         <div id="modal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <h2>마리아쥬스퀘어 웨딩홀 최종 견적서</h2>
-                <div id="search-results">
-                    <!-- 2. 주문 상품 -->
-                    <div class="order-container">
+                <!-- 2. 주문 상품 -->
+
+                <div class="order-container">
+                    <h1>마리아쥬스퀘어 웨딩홀 최종 견적서</h1>
+                    <div class="hall-image">
                         <img
                             src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall3.jpg"
-                            alt="Venue Image"
+                            alt="웨딩홀 이미지"
                         />
-                        <div class="order-info">
-                            <h2>[강남] 마리아주스퀘어</h2>
-                            <div class="event-info">
-                                본식 일시: 2024년 11월 17일 (일),
-                                오후14:00~15:00
-                            </div>
-                        </div>
                     </div>
 
+                    <div class="order-info">
+                        <h2>[강남] 마리아주스퀘어</h2>
+                        <div class="event-info">
+                            본식 일시: 2024년 11월 17일 (일), 오후14:00~15:00
+                        </div>
+                    </div>
                     <h2 class="order-detail-title">홀 기본 사용료</h2>
                     <table class="detail-table" id="hall-table">
                         <tr>
@@ -63,8 +63,8 @@
                     <div class="cost-item">
                         <h2>총 금액</h2>
                         <div class="amount">
-                            <span class="cost-amount">33,300,000</span>
-                            <span class="currency">원</span>
+                            <div class="cost-amount">33,300,000</div>
+                            <div class="currency">원</div>
                         </div>
                     </div>
                 </div>
