--- a/html/estimate/estimateFinal.html
+++ b/html/estimate/estimateFinal.html
@@ -6,6 +6,7 @@
         <title>Estimate Final Page</title>
         <link rel="stylesheet" href="../../css/common/reset.css">
         <link rel="stylesheet" href="../../css/estimate/estimateFinal.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script src="../../js/main/main.js"></script>
     </head>
     <body>
@@ -24,7 +25,9 @@
                             <a href="#">드레스 업체명     /   </a>
                             <a href="#">헤어메이크업 업체명</a>
                         </div>
-                        <a href="">업체 다시 선택</a>
+                        <a href=""><span class="material-symbols-outlined">
+                            replay
+                            </span>업체 다시 선택</a>
                     </div>
                 </div>
             </div>
