fix : [FE] 글자 배치 수정

--- a/html/Package/packageRecommend.html
+++ b/html/Package/packageRecommend.html
@@ -37,7 +37,7 @@
                                 </div>
                                 <div class="par2">
                                     <p>wedder는 기존 '웨딩플래너 역할'은 그대로 제공해드리면서</p>
-                                    <p><span>투명한 정찰제</span>로 업계 <span>최저가격</span>을 선보입니다.</span>
+                                    <p><span class="color">투명한 정찰제</span>로 업계 <span class="color">최저가격</span>을 선보입니다.</span>
                                 </div>
                                 <div class="par3">
                                     <p>이제 결혼준비 시장도 투명하게 바뀔 때가 되지 않았나요? Wedder가 앞장섭니다!</p>
