--- a/html/Package/packageMain.html
+++ b/html/Package/packageMain.html
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="par2">
                                     <p>wedder는 기존 '웨딩플래너 역할'은 그대로 제공해드리면서</p>
-                                    <p><span>투명한 정찰제</span>로 업계 <span>최저가격</span>을 선보입니다.</span>
+                                    <p><span class="color">투명한 정찰제</span>로 업계 <span class="color">최저가격</span>을 선보입니다.</span>
                                 </div>
                                 <div class="par3">
                                     <p>이제 결혼준비 시장도 투명하게 바뀔 때가 되지 않았나요? Wedder가 앞장섭니다!</p>
@@ -63,7 +63,7 @@
                     <img src="../../assets/images/RecommendPic1.png">
                     <div class="recommendpar">
                         <div class="recommendpar-top">
-                            <span class="circle"></span>
+                            <span class="circle">1</span>
                             <h2>합리적인 가격</h2>
                         </div>
                         <p>웨딩플래너 없이도 만족하실 수 있는 상품들을<br>투명한 정찰제 시행을 통해 업계 최저 가격으로 구성했어요.</p>
@@ -73,7 +73,7 @@
                     <img src="../../assets/images/RecommendPic2.png">
                     <div class="recommendpar">
                         <div class="recommendpar-top">
-                            <span class="circle"></span>
+                            <span class="circle">2</span>
                             <h2>맞춤형 서비스</h2>
                         </div>
                         <p>당신만을 위한 맞춤형 웨딩!<br>원하시는 분위기에 맞는 업체들을 한 곳에 모아뒀어요.</p>
@@ -83,7 +83,7 @@
                     <img src="../../assets/images/RecommendPic3.png">
                     <div class="recommendpar">
                         <div class="recommendpar-top">
-                            <span class="circle"></span>
+                            <span class="circle">3</span>
                             <h2>편의성</h2>
                         </div>
                         <p>모든 웨딩 준비, 한 곳에서 해결하세요!<br>쉽고 빠르게 결혼식을 준비할 수 있도록 패키지를 구성했어요.</p>
@@ -93,7 +93,7 @@
                     <img src="../../assets/images/RecommendPic4.png">
                     <div class="recommendpar">
                         <div class="recommendpar-top">
-                            <span class="circle"></span>
+                            <span class="circle">4</span>
                             <h2>프리미엄 패키지</h2>
                         </div>
                         <p>성수기 황금시간대 독점 패키지를 통해<br>가장 특별한 순간을 놓치지 마세요.<br>프리미엄 패키지로 좋은 날씨, 좋은 시간대를 예약할 수 있어요</p>
