--- a/html/estimate/estimateDetails.html
+++ b/html/estimate/estimateDetails.html
@@ -13,7 +13,7 @@
         <div class="container">
         <div class="hd__inner1100">
             <div class="banner">
-                <p class="bold">견적을 확인하고 싶은 업체를 선택해 주세요.</ㅔ>
+                <p class="bold">견적을 확인하고 싶은 업체를 선택해 주세요.</p>
                 <p>스드메 견적을 간편하게 확인할 수 있어요</p>
             </div>  
             <div class="tabs">
