feat : [FE] 비밀번호 눈클릭 js 제작(미완성)

--- a/html/login/passfind.html
+++ b/html/login/passfind.html
@@ -19,5 +19,6 @@
             <button class="checkPoint">닫기</button><br/>
         </div>
     </div>
+    <script src="../../js/login/passfind.js"></script>
 </body>
 </html>
