fix: [FE] header, footer css 수정

--- a/html/admin/adminMain.html
+++ b/html/admin/adminMain.html
@@ -116,7 +116,7 @@
                                     <span>희망 예식일</span>
                                     <span>2024-11-23 토요일</span>
                                 </div>
-                                <!-- 3-1. 전달사항 더보기 & 줄이기-->
+                                <!-- 3-1. 전달사항 더보기 & 닫기-->
                                 <div class="announcement">
                                     <span>전달 사항</span>
                                     <div class="text-wrapper">
@@ -129,7 +129,7 @@
                                             예약 가능 여부와 세부사항, 추가 비용
                                             등에 대해 상담하고 싶습니다.
                                         <div class="more-text">더보기</div>
-                                        <div class="less-text">줄이기</div>
+                                        <div class="less-text">닫기</div>
                                         </p>
                                     </div>
                                 </div>
