--- a/html/estimate/estimateDetails.html
+++ b/html/estimate/estimateDetails.html
@@ -154,8 +154,8 @@
                 </div>
                 </div>
                 <div class="buttons">
-                    <button class="back">이전</button>
-                    <button class="next">다음으로</button>
+                    <button onclick="location.href='estimateCal.html'" class="back">이전</button>
+                    <button onclick="location.href='estimateFinal.html'" class="next">다음으로</button>
                 </div>
             </div>
         </div>
