--- a/html/estimate/estimateFinal.html
+++ b/html/estimate/estimateFinal.html
@@ -139,7 +139,7 @@
                                 
                             </div>
                             <div class="buttons">
-                                <button class="back">뒤로가기</button>
+                                <button onclick="location.href='estimateDetails.html'" class="back">뒤로가기</button>
                                 <button class="add">견적함에 담기</button>
                             </div>
                         </div>
