fix : [FE] 선택하신 목록 수정

--- a/html/estimate/estimateDetails.html
+++ b/html/estimate/estimateDetails.html
@@ -112,18 +112,18 @@
                                 <img src="../../assets/images/estimateDetails2.png" alt="목록사진">
                             </div>
                             <div class="pic-right">
+                                <div class="item-title">
+                                    <span>S 스튜디오</span>
+                                    <span>330,000원</span>
+                                </div>
                                 <div class="items">
-                                    <div class="item">
-                                        <span>S 스튜디오</span>
-                                        <span>330,000원</span>
-                                    </div>
                                     <div class="item">
                                         <span>· 수정 데이터</span>
                                         <span>165,000원</span>
                                     </div>
                                     <div class="item">
                                         <span>· 플라리 촬영</span>
-                                        <span>150,000원</span>
+                                        <span>155,000원</span>
                                     </div>
                                     <div class="item">
                                         <span>· 야간 촬영</span>
