fix : [FE] 패키지 버튼 기능 구현

--- a/html/Package/packageMain.html
+++ b/html/Package/packageMain.html
@@ -128,7 +128,7 @@
             <div class="packages">
                 <div class="pack-title">
                     <div class="bestpackage">Best Package</div>
-                    <div class="look-aroud"><a href="#">패키지 구경하기 →</a></div>
+                    <div class="look-aroud"><a href="../../html/Package/packageRecommend.html">패키지 구경하기 →</a></div>
                 </div>
                 <div class="package-list">
                     <div class="package">
