--- a/html/Package/packageRecommend.html
+++ b/html/Package/packageRecommend.html
@@ -94,7 +94,7 @@
                                         <p class="down">[촬영+본식] 신부신랑 헤어메이크업</p>
                                     </div>
                                 </div>
-                                <a class="detail" href="#">상품 자세히 보기 &#62;</a>
+                                <a class="detail" href="../../html/Package/packageDetails.html">상품 자세히 보기 &#62;</a>
                             </div>
                         </div>
                         <div class="grid">
