--- a/html/Package/packageDetails.html
+++ b/html/Package/packageDetails.html
@@ -77,7 +77,7 @@
                         </div>          
                     </div>
                     <div class="buttons">
-                        <button class="back">뒤로 가기</button>
+                        <button onclick="location.href='packageRecommend.html'" class="back">뒤로 가기</button>
                         <button class="pay">패키지 결제하기</button>
                     </div>
                 </div>    
