feat : [FE] couplePage re: create

--- a/html/mypage/myPayment.html
+++ b/html/mypage/myPayment.html
@@ -54,7 +54,7 @@
           <h3>My 결제 내역</h3>
         </section>
         <!-- 3.서치 바 -->
-        <div class="navibar-placeholder"></div>
+        <div id="navibar-placeholder"></div>
 
         <!--탭  -->
 
