chore : [FE] git commit academy

--- a/html/mypage/couplePage.html
+++ b/html/mypage/couplePage.html
@@ -95,7 +95,9 @@
             <div class="sub-title">예약 내역</div>
             <div class="detail-view"><a href="">예약 내역 상세보기>></a></div>
           </div>
-          <div class="brand-name">웨딩홀</div>
+          <div>
+            <div class="brand-name" id="brand-name-hole">웨딩홀</div>
+          </div>
           <div class="company-container">
             <div>
               <img
@@ -321,12 +323,12 @@
           </table>
         </section>
         <!--5.section 5 couple-section5 환불 내역 기능  -->
-        <section class="couplePage-refund" id="couplePage-section5">
+        <!-- <section class="couplePage-refund" id="couplePage-section5">
           <div class="sub-title-header">
             <div class="sub-title">환불 내역</div>
             <div class="detail-view"><a href="">환불 내역 상세보기>></a></div>
           </div>
-        </section>
+        </section> -->
       </div>
     </div>
   </body>
