feat: [FE] 웨딩홀 후기 찾기  모달창

--- a/html/weddingHall/weddingHallDetail.html
+++ b/html/weddingHall/weddingHallDetail.html
@@ -162,9 +162,11 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="schedule-button">
-                            방문 상담 신청 하러가기
-                        </button>
+                        <a href="../../html/visitReservation/visitReserveDate.html">
+                            <button class="schedule-button">
+                                방문 상담 신청 하러가기
+                            </button>
+                        </a>
                     </div>
                 </div>
             </section>
